fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -465,7 +465,7 @@ code {
 
    .backside-content {
       max-height: 50vh;
-      margin-top: 5rem;
+      margin-top: 5.2rem;
       max-width: 100%;
       overflow-y: scroll;
    }
